--- a/azure_creds_bulk_import.yml
+++ b/azure_creds_bulk_import.yml
@@ -36,12 +36,13 @@
           Authorization: "Bearer PYCNiXtSTxlstK9v3uOoCUOb3VszMN "
           Content-Type: "application/json"
         body_format: json
+        validate_certs: false
         body:
           name: "{{ credential_name }} - {{ item }}"
           description: "{{ credential_description }} for subscription {{ item }}"
           organization: "{{ organization_id }}"
           credential_type: 8  # Azure credential type ID
-          validate_certs: false
+          force_basic_auth: true
           inputs:
             client: "{{ azure_client_id }}"
             secret: "{{ azure_client_secret }}"
