--- a/azure_creds_bulk_import.yml
+++ b/azure_creds_bulk_import.yml
@@ -8,7 +8,7 @@
 
   vars:
     # AAP Controller URL
-    aap_controller_url: "https://:192.168.86.29:8443"
+    aap_controller_url: "https://192.168.86.29:8443"
 
     # Base Credential parameters
     credential_name: "subscription id 1"
