--- a/azure_creds_bulk_import.yml
+++ b/azure_creds_bulk_import.yml
@@ -35,7 +35,7 @@
       ansible.controller.credential:
         name: azure_credential1
         organization: "{{ organization_id }}"
-        credential_type: 10
+        credential_type: Microsoft Azure Resource Manager
         inputs:
           client: "{{ azure_client_id }}"
           secret: "{{ azure_client_secret }}"
