--- a/azure_creds_bulk_import.yml
+++ b/azure_creds_bulk_import.yml
@@ -22,6 +22,22 @@
     azure_tenant_id: "6dd8b6a1-6749-4de3-a27e-3fd3484c6da7"
     
   tasks:
+    - name: Create project
+      ansible.builtin.uri:
+      url: "https://192.168.86.29:8443/api/v2/projects/"
+      method: POST
+      body_format: json
+      headers:
+        Content-Type: "application/json"
+        Authorization: "Bearer ZDhlKIi7QWcOpjOPiARUuGzttoB18f"
+      body:
+        name: aap-config
+        scm_type: "git"
+        scm_url: carefirst-github
+        organization: 1
+        credential: https://github.com/cloudapps-idey/ansible.git
+        scm_update_on_launch: true
+      validate_certs: false
     - name: Create Credential
       ansible.controller.credential:
         name: azure_credential1
