added 12345 for client_id and tenant_id

--- a/controller-api-samples/credentials/create_credential_azure.yml
+++ b/controller-api-samples/credentials/create_credential_azure.yml
@@ -10,9 +10,9 @@
     organization_id: "Org1"
 
     # Azure ARM Credentials
-    azure_client_id: "39dc1694-c978-4611-8682-c8a71853b71e"
+    azure_client_id: "12345"
     azure_client_secret: "{{ secret_key }}"   # template's survey provided value
-    azure_tenant_id: "6dd8b6a1-6749-4de3-a27e-3fd3484c6da7"
+    azure_tenant_id: "12345"
 
   tasks:
     - name: Obtain API token from AAP Controller
